# simpleamd

./: .gitignore  AUTHORS  COPYING  README  amd.c  autogen.sh  configure.ac  logger.c  samd_private.h  simpleamd.h  vad.c
rpm/: build_rpm.sh  create_src_tarball.sh  simpleamd.spec
scripts/: toraw.sh  toraw32000.sh
src/: Makefile.am  amd.c  beep.c  frameanalyzer.c  logger.c  samd_private.h  simpleamd.c  simpleamd.h  vad.c
